# 3-package-black_rhino

./: Pipfile  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/random_minigame/: __init__.py  __main__.py  random_minigame.py
tests/: conftest.py  test_random_minigame.py  test_roll_dice.py  test_sanity.py
